Fix paragraph spacing issue on about page

--- a/style.css
+++ b/style.css
@@ -401,12 +401,10 @@ body {
 .post-featured-image img {
   object-fit: cover;
   width: 100%;
-	max-height: 650px;
+	max-height: 550px;
 }
 
 .contact-form-section {
-  /*background: rgb(99,164,151);
-  background: radial-gradient(circle, rgba(99,164,151,1) 0%, rgba(123,123,123,1) 100%); */
   display: block;
   margin: 3% -15px;
   padding: 3% 2%;
@@ -535,9 +533,13 @@ p.noflex {
 }
 
 .line-spacing p {
-	line-height: 1.6;
+	line-height: 1.8;
+	padding: 1% 0;
+	text-align: center;
+}
+
+.line-spacing {
 	padding: 3% 2%;
-	text-align: center; 
 }
 
 /**********TUTORIALS PAGE STYLING**********/
